test_programs/compile_failure/noirc_frontend_tests_turbofish_turbofish_in_struct_pattern_errors_if_type_mismatch/src/main.nr

    struct Foo<T> {
        x: T
    }

    fn main() {
        let value: Field = 0;
        let Foo::<i32> { x } = Foo { x: value };
        let _ = x;
    }
    